<resources>
    <string name="app_name">Front</string>
    
    <!-- Auth Screens -->
    <string name="login_title">Вход в систему</string>
    <string name="register_title">Регистрация</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="role">Роль</string>
    <string name="login_button">Войти</string>
    <string name="register_button">Зарегистрироваться</string>
    <string name="no_account">Нет аккаунта? Зарегистрироваться</string>
    <string name="have_account">Есть аккаунт? Войти</string>
    <string name="login_as_guest">Войти как гость</string>
    <string name="guest_mode">Режим гостя</string>
    <string name="login_required_title">Требуется авторизация</string>
    <string name="login_required_message">Эта функция доступна только зарегистрированным пользователям</string>
    <string name="guest_access_denied">Недоступно в режиме гостя</string>
    <string name="switch_to_account">Войти в аккаунт</string>
    <string name="action_login">Войти</string>
    <string name="divider_or">или</string>
    <string name="logout_title">Выход</string>
    <string name="logout_message">Вы уверены, что хотите выйти?</string>
    <string name="action_yes">Да</string>
    <string name="action_no">Нет</string>
    <string name="create_teams_auth_required">Создание коллективов доступно только авторизованным пользователям</string>
    
    <!-- Validation Messages -->
    <string name="error_empty_email">Введите email</string>
    <string name="error_invalid_email">Некорректный email</string>
    <string name="error_empty_password">Введите пароль</string>
    <string name="error_short_password">Пароль должен быть не менее 6 символов</string>
    
    <!-- Departments -->
    <string name="departments_title">Кафедры</string>
    <string name="department_detail_title">Детали кафедры</string>
    <string name="search_departments">Поиск кафедр…</string>
    <string name="employee_count">Сотрудников: %d</string>
    <string name="employees_title">Сотрудники</string>
    <string name="no_departments">Кафедры не найдены</string>
    <string name="no_employees">Сотрудники не найдены</string>
    
    <!-- Employees -->
    <string name="employee_detail_title">Детали сотрудника</string>
    <string name="employee_info">Информация</string>
    <string name="employee_department">Кафедра</string>
    <string name="employee_post">Должность</string>
    <string name="employee_email">Email</string>
    <string name="employee_role">Роль</string>
    <string name="employee_id">ID: %d</string>
    
    <!-- Actions -->
    <string name="action_logout">Выход</string>
    <string name="action_add">Добавить</string>
    <string name="action_edit">Редактировать</string>
    <string name="action_delete">Удалить</string>
    <string name="action_save">Сохранить</string>
    <string name="action_cancel">Отмена</string>
    
    <!-- Common -->
    <string name="loading">Загрузка…</string>
    <string name="error_occurred">Произошла ошибка</string>
    <string name="success">Успешно</string>
    <string name="logout_confirm">Вы уверены, что хотите выйти?</string>
    
    <!-- Empty States -->
    <string name="empty_state_departments">📋\n\nНет кафедр для отображения</string>
    <string name="empty_state_employees">👥\n\nНет сотрудников для отображения</string>
    
    <!-- Roles -->
    <string name="role_student">STUDENT</string>
    <string name="role_employee">EMPLOYEE</string>
    <string name="role_admin">ADMIN</string>
    
    <!-- Articles -->
    <string name="articles">Статьи</string>
    <string name="my_articles">Мои статьи</string>
    <string name="create_article">Создать статью</string>
    <string name="article_title">Название статьи</string>
    <string name="article_description">Описание</string>
    <string name="article_link">Ссылка на источник</string>
    <string name="publication_date">Дата публикации</string>
    <string name="coauthors">Соавторы</string>
    <string name="select_coauthors">Выберите соавторов</string>
    <string name="no_articles">Нет статей</string>
    <string name="article_created">Статья создана</string>
    <string name="article_deleted">Статья удалена</string>
    <string name="error_create_article">Ошибка создания статьи</string>
    <string name="error_delete_article">Ошибка удаления статьи</string>
    
    <!-- Research Teams -->
    <string name="research_teams">Научные коллективы</string>
    <string name="team_name">Название коллектива</string>
    <string name="team_description">Описание</string>
    <string name="team_leader">Лидер</string>
    <string name="team_members">Участники</string>
    <string name="research_works">Научные работы</string>
    <string name="work_title">Название работы</string>
    <string name="work_status">Статус</string>
    <string name="add_member">Добавить участника</string>
    <string name="add_work">Добавить работу</string>
    <string name="create_team">Создать коллектив</string>
    
    <!-- Profile -->
    <string name="action_menu">Меню</string>
    <string name="action_profile">Профиль</string>
    <string name="menu_departments">Кафедры</string>
    <string name="menu_articles">Статьи</string>
    <string name="menu_research_teams">Научные коллективы</string>
    <string name="profile_title">Мой профиль</string>
    <string name="profile_info">Информация</string>
    <string name="profile_my_articles">Мои статьи</string>
    <string name="profile_participation">Участие</string>
    <string name="profile_teams">Коллективы</string>
    <string name="profile_login_required">Войдите для просмотра профиля</string>
    
    <!-- Articles -->
    <string name="articles_title">Все статьи</string>
    <string name="article_detail_title">Детали статьи</string>
    <string name="main_author">Главный автор</string>
    <string name="external_link">Внешняя ссылка</string>
    <string name="open_link">Открыть ссылку</string>
    <string name="search_articles">Поиск статей</string>
    <string name="created_at">Создано</string>
    <string name="updated_at">Обновлено</string>
    
    <!-- Empty States -->
    <string name="no_teams">Нет коллективов</string>
</resources>