<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <item
        android:id="@+id/action_menu"
        android:title="@string/action_menu"
        android:icon="@drawable/ic_menu"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/menu_departments"
                android:title="@string/menu_departments"
                android:icon="@drawable/ic_info" />
            <item
                android:id="@+id/menu_articles"
                android:title="@string/menu_articles"
                android:icon="@drawable/ic_article" />
            <item
                android:id="@+id/menu_research_teams"
                android:title="@string/menu_research_teams"
                android:icon="@drawable/ic_team" />
        </menu>
    </item>
    
    <item
        android:id="@+id/action_profile"
        android:title="@string/action_profile"
        android:icon="@drawable/ic_profile"
        app:showAsAction="ifRoom" />
    
    <item
        android:id="@+id/action_logout"
        android:title="@string/action_logout"
        android:icon="@drawable/ic_logout"
        app:showAsAction="ifRoom" />
</menu>
